// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-card should render with _label="Überschrift" _href="#/blank_link" _target="_blank" _level=2 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <a class="kol-card__link" href="#/blank_link" target="_blank">
        <h2 class="kol-card__header kol-headline kol-headline--h2 kol-headline--single" id="card-heading-nonce">
          Überschrift
        </h2>
      </a>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _href="#/blank_link" _target="_blank" 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <a class="kol-card__link" href="#/blank_link" target="_blank">
        <strong class="kol-card__header kol-headline kol-headline--single kol-headline--strong" id="card-heading-nonce">
          Überschrift
        </strong>
      </a>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _href="#/blank_link" 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <a class="kol-card__link" href="#/blank_link">
        <strong class="kol-card__header kol-headline kol-headline--single kol-headline--strong" id="card-heading-nonce">
          Überschrift
        </strong>
      </a>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=0 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <strong class="kol-card__header kol-headline kol-headline--single kol-headline--strong" id="card-heading-nonce">
        Überschrift
      </strong>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=0 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <strong class="kol-card__header kol-headline kol-headline--single kol-headline--strong" id="card-heading-nonce">
        Überschrift
      </strong>
      <div class="kol-card__content">
        <slot></slot>
      </div>
      <div class="kol-card__close-button kol-close-button">
        <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone">
          <button aria-label="kol-close" class="kol-button__interactive-element" type="button">
            <span class="kol-button__text kol-span kol-span--hide-label">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-cross" role="presentation"></i>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
          <div class="kol-button__tooltip">
            <div class="kol-tooltip__floating">
              <div class="kol-tooltip__arrow"></div>
              <span class="kol-span kol-tooltip__content">
                <span class="kol-span__container">
                  <span class="kol-span__label">
                    kol-close
                  </span>
                  <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=0 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <strong class="kol-card__header kol-headline kol-headline--single kol-headline--strong" id="card-heading-nonce">
        Überschrift
      </strong>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h1 class="kol-card__header kol-headline kol-headline--h1 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h1>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h1 class="kol-card__header kol-headline kol-headline--h1 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h1>
      <div class="kol-card__content">
        <slot></slot>
      </div>
      <div class="kol-card__close-button kol-close-button">
        <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone">
          <button aria-label="kol-close" class="kol-button__interactive-element" type="button">
            <span class="kol-button__text kol-span kol-span--hide-label">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-cross" role="presentation"></i>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
          <div class="kol-button__tooltip">
            <div class="kol-tooltip__floating">
              <div class="kol-tooltip__arrow"></div>
              <span class="kol-span kol-tooltip__content">
                <span class="kol-span__container">
                  <span class="kol-span__label">
                    kol-close
                  </span>
                  <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h1 class="kol-card__header kol-headline kol-headline--h1 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h1>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h2 class="kol-card__header kol-headline kol-headline--h2 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h2>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h2 class="kol-card__header kol-headline kol-headline--h2 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h2>
      <div class="kol-card__content">
        <slot></slot>
      </div>
      <div class="kol-card__close-button kol-close-button">
        <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone">
          <button aria-label="kol-close" class="kol-button__interactive-element" type="button">
            <span class="kol-button__text kol-span kol-span--hide-label">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-cross" role="presentation"></i>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
          <div class="kol-button__tooltip">
            <div class="kol-tooltip__floating">
              <div class="kol-tooltip__arrow"></div>
              <span class="kol-span kol-tooltip__content">
                <span class="kol-span__container">
                  <span class="kol-span__label">
                    kol-close
                  </span>
                  <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h2 class="kol-card__header kol-headline kol-headline--h2 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h2>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h3 class="kol-card__header kol-headline kol-headline--h3 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h3>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h3 class="kol-card__header kol-headline kol-headline--h3 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h3>
      <div class="kol-card__content">
        <slot></slot>
      </div>
      <div class="kol-card__close-button kol-close-button">
        <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone">
          <button aria-label="kol-close" class="kol-button__interactive-element" type="button">
            <span class="kol-button__text kol-span kol-span--hide-label">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-cross" role="presentation"></i>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
          <div class="kol-button__tooltip">
            <div class="kol-tooltip__floating">
              <div class="kol-tooltip__arrow"></div>
              <span class="kol-span kol-tooltip__content">
                <span class="kol-span__container">
                  <span class="kol-span__label">
                    kol-close
                  </span>
                  <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h3 class="kol-card__header kol-headline kol-headline--h3 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h3>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h4 class="kol-card__header kol-headline kol-headline--h4 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h4>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h4 class="kol-card__header kol-headline kol-headline--h4 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h4>
      <div class="kol-card__content">
        <slot></slot>
      </div>
      <div class="kol-card__close-button kol-close-button">
        <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone">
          <button aria-label="kol-close" class="kol-button__interactive-element" type="button">
            <span class="kol-button__text kol-span kol-span--hide-label">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-cross" role="presentation"></i>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
          <div class="kol-button__tooltip">
            <div class="kol-tooltip__floating">
              <div class="kol-tooltip__arrow"></div>
              <span class="kol-span kol-tooltip__content">
                <span class="kol-span__container">
                  <span class="kol-span__label">
                    kol-close
                  </span>
                  <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h4 class="kol-card__header kol-headline kol-headline--h4 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h4>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h5 class="kol-card__header kol-headline kol-headline--h5 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h5>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h5 class="kol-card__header kol-headline kol-headline--h5 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h5>
      <div class="kol-card__content">
        <slot></slot>
      </div>
      <div class="kol-card__close-button kol-close-button">
        <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone">
          <button aria-label="kol-close" class="kol-button__interactive-element" type="button">
            <span class="kol-button__text kol-span kol-span--hide-label">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-cross" role="presentation"></i>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
          <div class="kol-button__tooltip">
            <div class="kol-tooltip__floating">
              <div class="kol-tooltip__arrow"></div>
              <span class="kol-span kol-tooltip__content">
                <span class="kol-span__container">
                  <span class="kol-span__label">
                    kol-close
                  </span>
                  <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h5 class="kol-card__header kol-headline kol-headline--h5 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h5>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h6 class="kol-card__header kol-headline kol-headline--h6 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h6>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h6 class="kol-card__header kol-headline kol-headline--h6 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h6>
      <div class="kol-card__content">
        <slot></slot>
      </div>
      <div class="kol-card__close-button kol-close-button">
        <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone">
          <button aria-label="kol-close" class="kol-button__interactive-element" type="button">
            <span class="kol-button__text kol-span kol-span--hide-label">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-cross" role="presentation"></i>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
          <div class="kol-button__tooltip">
            <div class="kol-tooltip__floating">
              <div class="kol-tooltip__arrow"></div>
              <span class="kol-span kol-tooltip__content">
                <span class="kol-span__container">
                  <span class="kol-span__label">
                    kol-close
                  </span>
                  <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <h6 class="kol-card__header kol-headline kol-headline--h6 kol-headline--single" id="card-heading-nonce">
        Überschrift
      </h6>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <article aria-labelledby="card-heading-nonce" class="kol-card">
      <strong class="kol-card__header kol-headline kol-headline--single kol-headline--strong" id="card-heading-nonce">
        Überschrift
      </strong>
      <div class="kol-card__content">
        <slot></slot>
      </div>
    </article>
  </template>
</kol-card>
`;

exports[`kol-card-wc should render with _label="Überschrift" _href="#/blank_link" _target="_blank" 1`] = `
<kol-card-wc>
  <!---->
  <article aria-labelledby="card-heading-nonce" class="kol-card">
    <a class="kol-card__link" href="#/blank_link" target="_blank">
      <strong class="kol-card__header kol-headline kol-headline--single kol-headline--strong" id="card-heading-nonce">
        Überschrift
      </strong>
    </a>
    <div class="kol-card__content"></div>
  </article>
</kol-card-wc>
`;

exports[`kol-card-wc should render with _label="Überschrift" _level=2 _hasCloser=true 1`] = `
<kol-card-wc>
  <!---->
  <article aria-labelledby="card-heading-nonce" class="kol-card">
    <h2 class="kol-card__header kol-headline kol-headline--h2 kol-headline--single" id="card-heading-nonce">
      Überschrift
    </h2>
    <div class="kol-card__content"></div>
    <div class="kol-card__close-button kol-close-button">
      <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone">
        <button aria-label="kol-close" class="kol-button__interactive-element" type="button">
          <span class="kol-button__text kol-span kol-span--hide-label">
            <span class="kol-span__container">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-cross" role="presentation"></i>
              <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
            </span>
          </span>
        </button>
        <div class="kol-button__tooltip">
          <div class="kol-tooltip__floating">
            <div class="kol-tooltip__arrow"></div>
            <span class="kol-span kol-tooltip__content">
              <span class="kol-span__container">
                <span class="kol-span__label">
                  kol-close
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </article>
</kol-card-wc>
`;

exports[`kol-card-wc should render with _label="Überschrift" 1`] = `
<kol-card-wc>
  <!---->
  <article aria-labelledby="card-heading-nonce" class="kol-card">
    <strong class="kol-card__header kol-headline kol-headline--single kol-headline--strong" id="card-heading-nonce">
      Überschrift
    </strong>
    <div class="kol-card__content"></div>
  </article>
</kol-card-wc>
`;
